Added Functions to Stock Up Screen
Scanner is now either fetches product details from database
and displays information in StockUpBottomSheet, or shows
a dialog asking user to create a new product entry if barcode
has no existing record in the database. When confirmed, the user
is directed to the Product Entry Screen.

Search bar functions similarly. Clicking on a search result
display the bottom sheet with the product detail selected.
An "Add New Product" button directs the user to the Product
Entry screen when pressed.

NOTE: Search bar results do not update with the latest information
unless recomposition occurs.

* Add functions stated above.
* Improve UI design of search bar results list.
* Fix bug where the cursor in search bar is not always at the end of the string.
* Restructured ScannerState and SearchBarState.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,24 @@
 <resources>
     <string name="app_name">SariSariInventoryApp</string>
+
+    <string name="product_number">Product Number</string>
+    <string name="product_name">Product Name</string>
+    <string name="product_price">Price</string>
+    <string name="product_stock">In Stock</string>
+    <string name="amount">Amount</string>
+
+    <string name="scan_barcode">Scan Barcode</string>
+    <string name="search_manually">or search manually</string>
+
+    <string name="amount_to_add">Amount To Add</string>
+    <string name="add_to_stock">Add To Stock</string>
+
+    <string name="new_product_dialog_message">
+        The barcode scanned has no existing records.
+        Would you like to create a new one?
+    </string>
+    <string name="add_new_product">Add New Product</string>
+
+    <string name="confirm">Confirm</string>
+    <string name="cancel">Cancel</string>
 </resources>
