Added Receipt Scanner
Started making the barcode scanner for the receipt.
Created two viewmodel, Receipt and ReceiptScanner.
The Receipt viewmodel can be shared between the receipt
and scanner screen, which means we can add products to the
receipt while in the scanner.

Tried using the SavedStateHandle object to pass products
from the scanner to the receipt, but using shared viewmodels
was easier to manage.

* Refactor scanner related classes' names.
* Change ProductDao "getProducts" function result type to nullable.
* Move getProduct function from children to parent BarcodeScannerViewModel
* Add onPermissionResult, SwitchCamera, and onBarcodeScanned functions to
  ScannerCameraState class.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,14 +10,17 @@
     <string name="scan_barcode">Scan Barcode</string>
     <string name="search_manually">or search manually</string>
 
-    <string name="amount_to_add">Amount To Add</string>
     <string name="add_to_stock">Add To Stock</string>
+    <string name="add_to_receipt">Add To Receipt</string>
+    <string name="add_new_product">Add New Product</string>
 
     <string name="new_product_dialog_message">
         The barcode scanned has no existing records.
         Would you like to create a new one?
     </string>
-    <string name="add_new_product">Add New Product</string>
+
+    <string name="product_stock_updated">Product Stock Updated!</string>
+    <string name="product_added_to_receipt">Product Added To Receipt!</string>
 
     <string name="confirm">Confirm</string>
     <string name="cancel">Cancel</string>
