--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,9 @@
 
     <string name="confirm">Confirm</string>
     <string name="cancel">Cancel</string>
+
+    <string name="error_duplicate">%1$s must be unique.</string>
+    <string name="error_field_required">Field is required.</string>
+    <string name="error_maximum_exceeded">Value must not exceed %1$s.</string>
+    <string name="error_minimum_not_reached">Value must be more than %1$s.</string>
 </resources>
