--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">SariSariInventoryApp</string>
 
+    <string name="product_image">Product Image</string>
     <string name="product_number">Product Number</string>
     <string name="product_name">Product Name</string>
     <string name="product_price">Price</string>
@@ -29,4 +30,25 @@
     <string name="error_field_required">Field is required.</string>
     <string name="error_maximum_exceeded">Value must not exceed %1$s.</string>
     <string name="error_minimum_not_reached">Value must be more than %1$s.</string>
+
+    <string name="inventory">Inventory</string>
+    <string name="home">Home</string>
+    <string name="sell">Sell</string>
+    <string name="settings">Settings</string>
+
+    <string name="no_image">No Image Found</string>
+    <string name="delete">Delete</string>
+
+    <string name="sort_by">Sort By</string>
+    <string name="sort_menu_content_description">Sorting type menu</string>
+    <string name="sort_by_product_name">By Product Name</string>
+    <string name="sort_by_product_number">By Product Number</string>
+    <string name="sort_by_product_price">By Price</string>
+    <string name="sort_by_product_stock">By Stock</string>
+
+    <string name="no_product_number">No Product Number</string>
+
+    <string name="inventory_search_content_description">Search for product name or number</string>
+    <string name="search_bar_clear_content_description">Clear search text</string>
+    <string name="inventory_search_hint">Search product name or number</string>
 </resources>
