Update inventory screen and items
This commit updates the inventory screen and items. It changes the structure
of the FAB and bottom navigation in the inventory.

* Add inventory bottom app bar
* Anchor FAB to bottom app bar
* Add content description strings for inventory buttons
* Add dimens for inventory item card and images

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,4 +51,6 @@
     <string name="inventory_search_content_description">Search for product name or number</string>
     <string name="search_bar_clear_content_description">Clear search text</string>
     <string name="inventory_search_hint">Search product name or number</string>
+    <string name="new_product_fab_content_desc">Add new product</string>
+    <string name="delete_product_content_desc">Delete %s</string>
 </resources>
