--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,6 +35,7 @@
     <string name="home">Home</string>
     <string name="sell">Sell</string>
     <string name="settings">Settings</string>
+    <string name="new_product">New Product</string>
 
     <string name="no_image">No Image Found</string>
     <string name="delete">Delete</string>
@@ -53,4 +54,15 @@
     <string name="inventory_search_hint">Search product name or number</string>
     <string name="new_product_fab_content_desc">Add new product</string>
     <string name="delete_product_content_desc">Delete %s</string>
+    <string name="new_product_image_content_desc">Product image</string>
+
+    <string name="add_product_image">Choose Image</string>
+    <string name="remove_product_image">Remove Image</string>
+
+    <string name="camera">Camera</string>
+    <string name="gallery">Gallery</string>
+    <string name="photos_and_images">Photos and Images</string>
+    <string name="permission_required_toast">%s permission required.</string>
+
+    <string name="new_product_added">New product successfully added!</string>
 </resources>
