--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,11 +20,14 @@
         Would you like to create a new one?
     </string>
 
-    <string name="product_stock_updated">Product Stock Updated!</string>
-    <string name="product_added_to_receipt">Product Added To Receipt!</string>
-
     <string name="confirm">Confirm</string>
     <string name="cancel">Cancel</string>
+    <string name="edit">Edit</string>
+    <string name="save">Save</string>
+
+    <string name="save_edit_content_desc">Save changes</string>
+    <string name="cancel_edit_content_desc">Cancel changes</string>
+    <string name="edit_content_desc">Edit product details</string>
 
     <string name="error_duplicate">%1$s must be unique.</string>
     <string name="error_field_required">Field is required.</string>
@@ -39,6 +42,12 @@
 
     <string name="no_image">No Image Found</string>
     <string name="delete">Delete</string>
+
+    <string name="delete_confirmation_title">Delete Product</string>
+    <string name="delete_confirmation_message">
+        Are you sure you want to delete this product?
+        You cannot undo this action.
+    </string>
 
     <string name="sort_by">Sort By</string>
     <string name="sort_menu_content_description">Sorting type menu</string>
@@ -58,11 +67,16 @@
 
     <string name="add_product_image">Choose Image</string>
     <string name="remove_product_image">Remove Image</string>
+    <string name="change_product_image">Change Image</string>
 
     <string name="camera">Camera</string>
     <string name="gallery">Gallery</string>
     <string name="photos_and_images">Photos and Images</string>
-    <string name="permission_required_toast">%s permission required.</string>
 
+    <string name="permission_required_toast">%s permission required.</string>
     <string name="new_product_added">New product successfully added!</string>
+    <string name="product_stock_updated">Product Stock Updated!</string>
+    <string name="product_added_to_receipt">Product Added To Receipt!</string>
+    <string name="product_details_updated">Product Details Updated!</string>
+    <string name="product_deleted">Product Deleted!</string>
 </resources>
