Update scanner and product entry screens
This commit nests the constraint layouts found in the product
details and entry screens to allow the content to be scrollable
when elements to do not fit. This also changes the content and
element margins of the mentioned screens.

This commit also updates the top app bars found in the receipt and
stock up scanner screens. The top app bar is now a TopAppBar composable
and is transparent. The app bar contents change color depending if the app
has permission to use the camera or not.

This commit also makes the scanner screens rotatable since locking it in
portrait orientation causes the app to crash when navigating back to it
while in landscape.

* Add a BarcodeScannerTopAppBar composable
* Fix issue in product entry and detail screen where
   it is not scrollable on small screen sizes.
* Fix issue in product detail screen where pressing the up
   button navigates back instead of toggling off editing mode first.
* Add message in scanner screen when the app has no camera permissions.
* Fix issues in scanner screens where navigating back to it while in landscape
   orientation crashes the app.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -79,4 +79,12 @@
     <string name="product_added_to_receipt">Product Added To Receipt!</string>
     <string name="product_details_updated">Product Details Updated!</string>
     <string name="product_deleted">Product Deleted!</string>
+
+    <string name="top_app_bar_navigate_up_content_desc">Navigate back</string>
+    <string name="flip_camera_content_description">Flip camera</string>
+    <string name="scanner_no_camera_access">
+        Barcode scanner unavailable. \n
+        Enable camera access in app settings to use. \n
+        App Settings > Permissions > Camera
+    </string>
 </resources>
