Add Home Screen Content
This commit adds content to the home screen which are the following:
out of stock and low on stock counter cards, and a list of products
arranged by the number sold or revenue earned in the last 30 days.

* Add out of stock and low on stock counter cards.
* Add product statistics list.
* Add product statistics list adapter and item layout.
* Change home view model sorting functions to accommodate list adapter.
* Change HomeViewModel to use first() instead of collect() functions for flows.
* Refactor dimen resources names.
* Add string resources for home screen.
* Change ProductSale class to have embedded product value.
* Change getProductSalesFromDates to LEFT JOIN Products table.
* Fix issue in countLowOnStock where comparison is = :max to <= :max.
* Move some functions in HomeFragment onCreateView to onViewCreated.
* Add binding clean up in HomeFragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -52,6 +52,7 @@
     </string>
 
     <string name="no_product_image">Blank product image</string>
+    <string name="non_existing_product">Product does not exist</string>
     <string name="no_product_number">No Product Number</string>
     <string name="inventory_search_hint">Search product name or number</string>
     <string name="inventory_search_content_desc">Search for product name or number</string>
@@ -106,4 +107,18 @@
         This will clear also clear the receipt.
     </string>
     <string name="sale_confirmed">Sale successful!</string>
+
+    <string name="low_on_stock_icon_content_description">Low on stock indicator</string>
+    <string name="out_of_stock_icon_content_description">Out of stock indicator</string>
+    <string name="home_low_on_stock">
+        Low on&lt;br>
+        Stock: &lt;b>%d&lt;/b>
+    </string>
+    <string name="home_out_of_stock">
+        Out of&lt;br>
+        Stock: &lt;b>%d&lt;/b>
+    </string>
+
+    <string name="sort_by_sold">By Number Sold</string>
+    <string name="sort_by_profit">By Profit Earned</string>
 </resources>
