Change App Name
This commit changes the app name from "SariSariInventoryApp"
to "Stockpile"

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">SariSariInventoryApp</string>
+    <string name="app_name">Stockpile</string>
 
     <string name="product_image">Image of %s</string>
     <string name="product_number">Product Number</string>
